User logo efault modifie

--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -62,7 +62,7 @@
                     {% endthumbnail %} 
                 
                 {% else %}
-                    <img src="{% static 'img/post-1.jpg' %}" class="img-responsive">     
+                    <img src="" class="img-responsive">     
                 {% endif %}
 
                 <br>
@@ -157,7 +157,7 @@
                             <div class="media">
                                 <a class="pull-left" href="#"> 
                                   
-                                    <img src="{% static 'assets/images/chef2.jpg' %}" class="img-circle" width="50px;" alt="">
+                                    <img src="{% static 'assets/images/user-logo.jpg' %}" class="img-circle" width="50px;" alt="">
                                 </a> 
                                 <div class="media-body rp-comment">
                                     <span class="rp-arrow">
