--- a/templates/recipe/modals.html
+++ b/templates/recipe/modals.html
@@ -13,7 +13,7 @@
                                 
                             {% else %}
                             
-                            <img src="{% static 'img/user-logo.jpg' %}" class="img-responsive" data-pin-nopin="true">
+                            <img src="{% static 'assets/images/user-logo.jpg' %}" class="img-responsive" data-pin-nopin="true">
                             
                             {% endif %}
                             <h5 class="">{{recipe.author.first_name}} {{recipe.author.last_name}}</h5>
