--- a/templates/recipe/recipe_detail.html
+++ b/templates/recipe/recipe_detail.html
@@ -320,7 +320,7 @@
                             <div class="media">
                                 <a class="pull-left" href="#"> 
                                   
-                                    <img src="{% static 'assets/images/chef2.jpg' %}" class="img-rounded" width="50px;" alt="">
+                                    <img src="{% static 'assets/images/user-logo.jpg' %}" class="img-rounded" width="50px;" alt="">
                                 </a> 
                                 <div class="media-body rp-comment">
                                     <span class="rp-arrow">
