--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -145,7 +145,7 @@
                                 
                             {% else %}
                             
-                            <img src="{% static 'img/user-logo.jpg' %}" class="img-responsive" data-pin-nopin="true">
+                            <img src="{% static 'assets/images/user-logo.jpg' %}" class="img-responsive" data-pin-nopin="true">
                             
                             {% endif %}
                             <h5 class="">{{post.author.first_name}} {{post.author.last_name}}</h5>
