Ajout login via Google

--- a/templates/base_principal.html
+++ b/templates/base_principal.html
@@ -40,9 +40,9 @@
                         
                        <div class="widget-left">
                             <ul class="nav nav-tabs tabs-4">
-                                <li class="active"><a data-toggle="tab" href="#menu1">Top Recettes</a></li>
+                                <li class="active"><a data-toggle="tab" href="#menu1">Top des recettes</a></li>
                                 
-                                <li><a data-toggle="tab" href="#menu2">Top Videos</a></li>
+                                <li><a data-toggle="tab" href="#menu2">Top des vidéos</a></li>
                                 <li><a data-toggle="tab" href="#menu3">Articles récents</a></li>
                             </ul>   
 
@@ -134,7 +134,7 @@
 
                         <div class="widget-left">
 
-                            <h4>Top contributors</h4>
+                            <h4>Top 10 des contributeurs</h4>
                             <div class="separator4"></div>
                             <div class="card">
                                 
