--- a/templates/base.html
+++ b/templates/base.html
@@ -343,7 +343,7 @@
 
                         <div class="col-sm-4 col-xs-12">
                             <div class="single_widget wow fadeIn" data-wow-duration="800ms">
-                                <h4 class="footer_title">LATEST NEWS</h4>
+                                <h4 class="footer_title">ARTICLES RECENTS</h4>
                                 <div class="separator4"></div>
 
                                 <div class="footer_gellary">
