--- a/templates/account/account_inactive.html
+++ b/templates/account/account_inactive.html
@@ -46,7 +46,7 @@
 
 
 {% block content_base %}
-<h1>{% trans "Account Inactive" %}</h1>
+<h1>{% trans "Compte inactif" %}</h1>
 
-<p>{% trans "This account is inactive." %}</p>
+<p>{% trans "Ce compte a été désactivé" %}</p>
 {% endblock %}
