--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -54,7 +54,7 @@
 
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}Ce lien est invalide ou a été déjà utilisé.  Envoyez nous une nouvelle demande <a href="{{ passwd_reset_url }}">de réinitialisation</a>.{% endblocktrans %}</p>
+        <p>{% blocktrans %}Ce lien est invalide ou a été déjà utilisé.  Envoyez une nouvelle demande <a href="{{ passwd_reset_url }}">de réinitialisation</a>.{% endblocktrans %}</p>
     {% else %}
         {% if form %}
             <form method="POST" action="{{ action_url }}">
