--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -55,7 +55,7 @@
 			    </p>
 			    
 			    <p>Consultez votre dossier de spams pour vérifier que le message envoyé ne s'y trouve pas. 
-				Si vous ne recevez toujours pas l'e-mail, veuillez nous contacter
+				Si vous ne recevez toujours pas l'e-mail, veuillez nous <a href="#">contacter</a>
 
 			    {% endblocktrans %}</p>
 			</div>  
