--- a/templates/blog/post_publish_list.html
+++ b/templates/blog/post_publish_list.html
@@ -38,12 +38,11 @@
                         <table class="table table-bordered table-hover table-striped">
                             <thead>
                                 <tr>
-                                    <th>Date of publication</th>
-                                   
-                                    <th>Title</th>
-                                    <th>Views</th>
+                                    <th>{% trans 'Publié le' %}</th>
+                                    <th>{% trans 'Titre' %}</th>
+                                    <th>{% trans 'Vues' %}</th>
                                     <th>Likes</th>
-                                    <th>Posted by</th>
+                                    <th>{% trans 'Auteur' %}</th>
                                     <th>Actions</th>
                                 </tr>
                             </thead>
