--- a/templates/base_principal.html
+++ b/templates/base_principal.html
@@ -144,7 +144,7 @@
                                     
                                     <div class="media" style="padding: 10px;">
                                             
-                                            <a class="pull-left" data-toggle="modal" data-target="#modalAvatar{{tp.author__id}}">
+                                            <a class="pull-left" data-toggle="modal" data-target="#modalUser{{tp.author__id}}">
                                                 
                                             {% if tp.author__profile__photo %}
                                                 {% thumbnail tp.author__profile__photo  "70x70" crop="center" as im %}
@@ -205,7 +205,7 @@
 
         </section> <!-- End of portfolio two Section -->        
 
-     <div class="modal fade" id="modalAvatar{{tp.author__id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+     <div class="modal fade" id="modalUser{{tp.author__id}}" tabindex="-1" role="dialog">
          <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -223,11 +223,45 @@
                             <div class="col-md-8">
 
                                 <p>{{recipe.author.profile.bio}}</p>
-                                <ul class="social-link list-inline text-right">
-                                    <li><a href="" class="btn-floating facebook"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="" class="btn-floating twitter"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="" class="btn-floating gplus"><i class="fa fa-google-plus"></i></a></li>
-                                    <li><a href="#" class="btn-floating insta"><i class="fa fa-instagram"></i></a></li>
+                                <ul class="social-link list-inline">
+                                     <li>
+                                            {% if recipe.author.profile.facebook %}
+                                            <a href="{{recipe.author.profile.facebook}}" class="btn-floating facebook"><i class="fa fa-facebook"></i></a>
+                                            {% else %}
+                                             <a href="#" class="btn-floating facebook"><i class="fa fa-facebook"></i></a>
+                                            {% endif %}
+                                        </li>
+                                        <li>
+                                            {% if recipe.author.profile.twitter %}
+
+                                            <a href="{{recipe.author.profile.twitter}}" class="btn-floating twitter"><i class="fa fa-twitter"></i></a>
+                                            {% else %}
+                                            <a href="#" class="btn-floating twitter"><i class="fa fa-twitter"></i></a>
+                                            {% endif %}
+                                        </li>
+                                        <li>
+                                            {% if recipe.author.profile.gplus %}
+                                            <a href="{{recipe.author.profile.gplus}}" class="btn-floating gplus"><i class="fa fa-google-plus"></i></a>
+                                            {% else %}
+                                             <a href="#" class="btn-floating gplus"><i class="fa fa-google-plus"></i></a>
+                                            {% endif %}
+                                        </li>
+                                        <li>
+                                            {% if recipe.author.profile.instagram %}
+
+                                            <a href="{{recipe.author.profile.instagram}}" class="btn-floating insta"><i class="fa fa-instagram"></i></a>
+                                            {% else %}
+                                            <a href="#" class="btn-floating insta"><i class="fa fa-instagram"></i></a>
+                                            {% endif %}
+
+                                        </li>
+                                        <li>
+                                            {% if recipe.author.profile.linkedin %}
+                                            <a href="{{recipe.author.profile.linkedin}}" class="btn-floating linkedin"><i class="fa fa-linkedin"></i></a>
+                                            {% else %}
+                                            <a href="#" class="btn-floating likedin"><i class="fa fa-linkedin"></i></a>
+                                            {% endif %}
+                                        </li>
                                 </ul>
                             </div>
                         </div>
