--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -101,7 +101,7 @@
     </div>
 
     <div class="rp-post-share" style="padding: 0px 20px 15px 20px;">
-            <strong> SHARE &nbsp;&nbsp;  </strong>
+            <strong> {% trans 'PARTAGER' %} &nbsp;&nbsp;  </strong>
              <!--Facebook-->
                 {% post_to_facebook %}
    
@@ -141,7 +141,7 @@
 
         <div class="row" id="commentaire">
         {% get_comment_count for post as comment_count %}
-        <h5 class="padding-20" data-toggle="collapse" href="#collapse1"><i class="fa fa-comments" aria-hidden="true"></i> {{comment_count}} {% trans 'Commentaires' %} </h5>
+        <h5 class="padding-20" data-toggle="collapse" href="#collapse1"><i class="fa fa-comments" aria-hidden="true"></i> {{comment_count}} {% trans 'Commentaire'{{ comment_count|pluralize }} %} </h5>
         
 
         <div id="collapse1" class="panel-collapse collapse">
@@ -225,15 +225,15 @@
                     {{ form.timestamp }}
                     {{ form.security_hash }}
                     <div class="row">
-                        <div class="form-group col-xs-12 col-sm-4">
-                            <label>Nom <span class="label-description">(ex: William) <sup>*</sup></span></label></span> {{form.name|add_class:'form-control'}}  
+                        <div class="form-group col-xs-12 col-sm-6">
+                            <label>Nom <span class="label-description">(ex: Koffi) <sup>*</sup></span></label></span> {{form.name|add_class:'form-control'}}  
                         </div>
-                        <div class="form-group col-xs-12 col-sm-4">
-                            <label>Email <span class="label-description">(Not published) <sup>*</sup></span></label></span> {{form.email|add_class:'form-control'}}  
+                        <div class="form-group col-xs-12 col-sm-6">
+                            <label>Email <span class="label-description">(Non publié) <sup>*</sup></span></label></span> {{form.email|add_class:'form-control'}}  
                         </div>
-                        <div class="form-group col-xs-12 col-sm-4">
-                            <label>Website <span class="label-description">(Optional)</span> </label> {{form.url|add_class:'form-control'}} 
-                        </div>
+                      <!--   <div class="form-group col-xs-12 col-sm-4">
+                            <label>Site web <span class="label-description">(Optionnel)</span> </label> {{form.url|add_class:'form-control'}} 
+                        </div> -->
                     </div>
                     
                     <div class="row">
