--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -109,7 +109,7 @@
                     	</div>
                     	<div class="share pull-right clearfix">
                     		
-                    			<strong style="padding-right:25px;">SHARE:</strong> 
+                    			<strong style="padding-right:25px;">{% trans 'PARTAGER' %}:</strong> 
 
                     		<div class="pull-right">
 
