--- a/templates/blog/post_new_category.html
+++ b/templates/blog/post_new_category.html
@@ -13,14 +13,14 @@
                 <!-- Ajout de  catégorie -->
 
                 <div class="col-md-4">
-                    <h4>{% trans 'Ajouter/Modifier une catégorie' %}</h4>
+                    <h4>{% trans 'Ajouter une catégorie' %}</h4>
 
 	                <form method="POST"  name="form" action=""  class="" enctype="multipart/form-data">
 		                {% csrf_token %}
 		                  {{ form.as_p }}
                         
 
-	                	<button type="submit" class="save btn btn-default">{% trans 'Save' %}</button>
+	                	<button type="submit" class="save btn btn-default">{% trans 'Enregistrer' %}</button>
 	                </form>
                 </div>
                   <!-- Liste de catégorie de blog -->
@@ -29,12 +29,13 @@
             
                 <div class="col-md-offset-1 col-md-7">
                 <h4>{% trans 'Liste des catégories' %}</h4>
-                    <table class="table table-border">
+                   <div class="table-responsive">
+                    <table class="table table-bordered table-hover table-striped">
 
                         <thead>
                             <tr>
-                                <th> Name</th>
-                                <th>Slug</th>
+                                <th> {% trans 'Nom' %}</th>
+                                <th>{% trans 'Slug' %}</th>
                                 <th>Actions</th>
 
                             </tr>
@@ -48,10 +49,10 @@
                                 <a href="javascript:;" data-toggle="collapse" data-target="#action_{{list.id}}"><i class="fa fa-fw fa-arrows-v"></i> Actions <i class="fa fa-fw fa-caret-down"></i></a>
                                     <ul id="action_{{list.id}}" class="collapse">
                                         <li>
-                                            <a href="{% url 'post_category_update' slug=list.slug%}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Modifier</a>
+                                            <a href="{% url 'post_category_update' slug=list.slug%}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>{% trans 'Modifier' %}</a>
                                         </li>
                                         <li>
-                                            <a data-toggle="modal" data-target="#deletecategory{{list.id}}"><i class="fa fa-trash-o" aria-hidden="true"></i>Supprimer</a>
+                                            <a data-toggle="modal" data-target="#deletecategory{{list.id}}"><i class="fa fa-trash-o" aria-hidden="true"></i>{% trans 'Supprimer' %}</a>
                                         </li>
                                     </ul>
                                 </td>
@@ -65,11 +66,11 @@
                                                 <h4 class="modal-title" id="myModalLabel{{list.id}}">Confirmer votre action</h4>
                                               </div>
                                               <div class="modal-body">
-                                                <p class="lead">Etes-vous sûrs de vouloir supprimer cette catégorie<strong>{{ list.title}}</strong>?</p>
+                                                <p class="lead">{% trans 'Etes-vous sûrs de vouloir supprimer cette catégorie' %}<strong>{{ list.title}}</strong>?</p>
                                               </div>
                                               <div class="modal-footer">
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                <a href="{% url 'post_category_delete' slug=list.slug %}" type="submit" class="btn btn-danger"> Supprimer</a>
+                                                <a href="{% url 'post_category_delete' slug=list.slug %}" type="submit" class="btn btn-danger"> {% trans 'Supprimer' %}</a>
                                               </div>
                                             </div>
                                           </div>
