--- a/templates/blog/post_preview.html
+++ b/templates/blog/post_preview.html
@@ -5,9 +5,9 @@
 {% block content_blog %}
 
 
-    <div class="row text-center">
+    <div class="row ">
         
-        <div class="col-lg-offset-2 col-lg-8">
+        <div class="col-lg-offset-1 col-lg-10">
 
         <h2><a href="">{{ post.title }}</a></h2>
                
