--- a/templates/recipe/recipe_detail.html
+++ b/templates/recipe/recipe_detail.html
@@ -243,18 +243,15 @@
                 <h5 class="text-center">Instructions</h5>
                 
                 <div class="rp-post-step">
-                
-                
+                          
                     {{recipe.preparation|safe}}
-                    
-                
                 
                 </div> 
             </div>
         </div>
 
         <div class="rp-post-share margin-bottom-20">
-            <strong> SHARE &nbsp;&nbsp;  </strong>
+            <strong> {% trans 'PARTAGER' %} &nbsp;&nbsp;  </strong>
              <!--Facebook-->
               
                 {% post_to_facebook %}
@@ -304,7 +301,7 @@
 
         <div class="row" id="comment">
            {% get_comment_count for recipe as comment_count %}
-            <h5 class="padding-20" data-toggle="collapse" href="#collapse1"><i class="fa fa-comments" aria-hidden="true"></i> {{comment_count}} {% trans 'Commentaires' %} </h5>              
+            <h5 class="padding-20" data-toggle="collapse" href="#collapse1"><i class="fa fa-comments" aria-hidden="true"></i> {{comment_count}} Commentaire{{ comment_count|pluralize }} </h5>              
 
             <div id="collapse1" class="panel-collapse collapse">
              
@@ -395,15 +392,15 @@
                         {{ form.timestamp }}
                         {{ form.security_hash }}
                         <div class="row">
-                            <div class="form-group col-xs-12 col-sm-4">
-                                <label>{% trans 'Nom' %} <span class="label-description">(ex: Jean) <sup>*</sup></span></label></span> {{form.name|add_class:'form-control'}}  
+                            <div class="form-group col-xs-12 col-sm-6">
+                                <label>{% trans 'Nom' %} <span class="label-description">(ex: Koffi) <sup>*</sup></span></label></span> {{form.name|add_class:'form-control'}}  
                             </div>
-                            <div class="form-group col-xs-12 col-sm-4">
+                            <div class="form-group col-xs-12 col-sm-6">
                                 <label>{% trans 'Email' %} <span class="label-description">(Non Publié) <sup>*</sup></span></label></span> {{form.email|add_class:'form-control'}}  
                             </div>
-                            <div class="form-group col-xs-12 col-sm-4">
-                                <label>{% trans 'Website' %}<span class="label-description">(Optionnel)</span> </label> {{form.url|add_class:'form-control'}}  
-                            </div>
+                            <!-- <div class="form-group col-xs-12 col-sm-4">
+                                <label>{% trans 'Site Web' %}<span class="label-description">(Optionnel)</span> </label> {{form.url|add_class:'form-control'}}  
+                            </div> -->
                         </div>
                         
                         <div class="row">
