--- a/templates/recipe/recipe_draft_list.html
+++ b/templates/recipe/recipe_draft_list.html
@@ -1,5 +1,7 @@
 {% extends 'recipe/recipe_publish_list.html' %}   
 {% load staticfiles %}
+{% load i18n %}
+{% load humanize %}
 
 {% block content_recipe %}
 
@@ -7,15 +9,15 @@
     <div class="row">
         
         <div class="col-lg-12">
-            <h2> Recettes en attente de publication</h2>
+            <h2> {% trans 'Recettes en attente de publication' %}</h2>
             <div class="table-responsive">
                 <table class="table table-bordered table-hover table-striped">
                     <thead>
                         <tr>
                             <th>Date</th>
-                            <th>Category</th>
-                            <th>Title</th>
-                            <th>Posted by</th>
+                            <th>{% trans 'Catégorie' %}</th>
+                            <th>{% trans 'Titre' %}</th>
+                            <th>{% trans 'Auteur' %}</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
@@ -28,13 +30,13 @@
                             <td><a href="{% url 'recipe_preview' slug=recipe.slug %}">{{recipe.title}}</a></td>
                             <td><a href="">{{recipe.author}}</a></td>
                             <td>
-                            <a href="javascript:;" data-toggle="collapse" data-target="#publish_{{recipe.id}}"><i class="fa fa-fw fa-arrows-v"></i> Publish <i class="fa fa-fw fa-caret-down"></i></a>
+                            <a href="javascript:;" data-toggle="collapse" data-target="#publish_{{recipe.id}}"><i class="fa fa-fw fa-arrows-v"></i> {% trans 'Publier' %} <i class="fa fa-fw fa-caret-down"></i></a>
                                 <ul id="publish_{{recipe.id}}" class="collapse">
                                     <li>
-                                        <a href="{% url 'recipe_publish' slug=recipe.slug %}">Yes</a>
+                                        <a href="{% url 'recipe_publish' slug=recipe.slug %}">{% trans 'Oui' %}</a>
                                     </li>
                                     <li>
-                                        <a data-toggle="modal" data-target="#unpublish{{recipe.id}}">No</a>
+                                        <a data-toggle="modal" data-target="#unpublish{{recipe.id}}">{% trans 'Non' %}</a>
                                     </li>
                                 </ul>
 
@@ -46,21 +48,21 @@
                                             <div class="modal-content">
                                               <div class="modal-header">
                                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                                <h4 class="modal-title" id="myModalLabel{{recipe.id}}">Confirmer votre action</h4>
+                                                <h4 class="modal-title" id="myModalLabel{{recipe.id}}">{% trans 'Confirmer votre action' %}</h4>
                                               </div>
                                               <div class="modal-body">
-                                                <p class="lead">% trans 'Etes-vous sûrs de vouloir supprimer cette recette?' %} <strong>{{ recipe.title}}</strong>?</p>
+                                                <p class="lead">{% trans 'Etes-vous sûrs de vouloir supprimer cette recette?' %} <strong>{{ recipe.title}}</strong>?</p>
                                               </div>
                                               <div class="modal-footer">
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                <a href="{% url 'recipe_delete' slug=recipe.slug %}" type="submit" class="btn btn-danger">Supprimer</a>
+                                                <a href="{% url 'recipe_delete' slug=recipe.slug %}" type="submit" class="btn btn-danger">{% trans 'Supprimer' %}</a>
                                               </div>
                                             </div>
                                           </div>
                                         </div>
                                     </form>
                          {% empty %}
-                            <tr>Aucune recette moment.</tr>
+                            <tr>{% trans 'Aucune recette pour le moment' %}</tr>
 
                         {% endfor %}  
  
