--- a/templates/recipe/recipe_publish_list.html
+++ b/templates/recipe/recipe_publish_list.html
@@ -18,7 +18,7 @@
                             </li>
                            
                             <li class="active">
-                                <i class="fa fa-cutlery" aria-hidden="true"></i> Recipes
+                                <i class="fa fa-cutlery" aria-hidden="true"></i> {% trans 'Recettes' %}
                             </li>
                         </ol>
                     </div>
@@ -38,12 +38,12 @@
                                 <thead>
                                     <tr>
                                         <td>#</td>
-                                        <th>Date of publication</th>
-                                        <th>Categorie</th>
-                                        <th>Title</th>
-                                        <th>Views</th>
+                                        <th>{% trans 'Publié le' %}</th>
+                                        <th>{% trans 'Catégorie' %}</th>
+                                        <th>{% trans 'Titre' %}</th>
+                                        <th>{% trans 'Vues' %}</th>
                                         <th>Likes</th>
-                                        <th>Posted by</th>
+                                        <th>{% trans 'Auteur' %}</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
@@ -81,10 +81,10 @@
                                             <div class="modal-content">
                                               <div class="modal-header">
                                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                                <h4 class="modal-title" id="myModalLabel{{recipe.id}}">Confirmer votre action</h4>
+                                                <h4 class="modal-title" id="myModalLabel{{recipe.id}}">{% trans 'Confirmer votre action' %}</h4>
                                               </div>
                                               <div class="modal-body">
-                                                <p class="lead">% trans 'Etes-vous sûrs de vouloir supprimer cette recette?' %}<strong>{{ recipe.title}}</strong>?</p>
+                                                <p class="lead">{% trans 'Etes-vous sûrs de vouloir supprimer cette recette?' %}<strong>{{ recipe.title}}</strong>?</p>
                                               </div>
                                               <div class="modal-footer">
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -96,7 +96,7 @@
                                     
 
                                     {% empty %}
-                                        <tr>Aucune recette pour le moment.</tr>
+                                        <tr>{% trans 'Aucune recette pour le moment' %}.</tr>
                                     {% endfor %}  
 
 
