--- a/templates/recipe/video_publish_list.html
+++ b/templates/recipe/video_publish_list.html
@@ -27,7 +27,7 @@
                 </div>
                 <!-- /.row -->
                 <div class="row">
-                    <div class="col-lg-12"><a href="{% url 'video_new' %}" class="btn btn-primary"> Ajouter une video</a></div>
+                    <div class="col-lg-12"><a href="{% url 'video_new' %}" class="btn btn-primary"> {% trans 'Ajouter une vidéo' %}</a></div>
                 </div>
 
 
@@ -40,11 +40,12 @@
                             <table class="table table-bordered table-hover table-striped">
                                 <thead>
                                     <tr>
-                                        <th>Date of publication</th>
-                                        <th>Title</th>
-                                        <th>Views</th>
+                                        <th>{% trans 'Publié le' %}</th>
+                                       
+                                        <th>{% trans 'Titre' %}</th>
+                                        <th>{% trans 'Vues' %}</th>
                                         <th>Likes</th>
-                                        <th>Posted by</th>
+                                        <th>{% trans 'Auteur' %}</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
@@ -61,10 +62,10 @@
                                             <a href="javascript:;" data-toggle="collapse" data-target="#action_{{video.id}}"><i class="fa fa-fw fa-arrows-v"></i> Actions <i class="fa fa-fw fa-caret-down"></i></a>
                                             <ul id="action_{{video.id}}" class="collapse">
                                                 <li>
-                                                    <a href="{% url 'video_preview' slug=video.slug%}"><i class="fa fa-eye" aria-hidden="true"></i>Voir</a>
+                                                    <a href="{% url 'video_preview' slug=video.slug%}"><i class="fa fa-eye" aria-hidden="true"></i>{% trans 'Voir' %}</a>
                                                 </li>
                                                 <li>
-                                                    <a href="{% url 'video_update' slug=video.slug%}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>MOdifier</a>
+                                                    <a href="{% url 'video_update' slug=video.slug%}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>{% trans 'Modifier' %}</a>
                                                 </li>
                                                 <li>
                                                     <a data-toggle="modal" data-target="#deletevideo{{video.id}}"><i class="fa fa-trash-o" aria-hidden="true"></i>Supprimer</a>
@@ -86,7 +87,7 @@
                                                 <p class="lead">Etes-vous sûrs de vouloir supprimer cette vidéo<strong>{{ video.title}}</strong>?</p>
                                               </div>
                                               <div class="modal-footer">
-                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                                <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
                                                 <a href="{% url 'video_delete' slug=video.slug %}" type="submit" class="btn btn-danger"> Supprimer</a>
                                               </div>
                                             </div>
