--- a/templates/userprofile/profile_preview.html
+++ b/templates/userprofile/profile_preview.html
@@ -18,7 +18,7 @@
                                 <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a>
                             </li>
                             <li>
-                                <i class="fa fa-fw fa-user"></i><a>Users</a>
+                                <i class="fa fa-fw fa-user"></i><a>{% trans 'Utilisateurs' %}</a>
                             </li>
                             
                         </ol>
@@ -26,11 +26,11 @@
                 </div>
                 <!-- /.row -->
                 <div class="row">
-                    <div class="col-lg-12"><a href="{% url 'userprofile_add' %}" class="btn btn-primary"> Add a user</a></div>
+                    <div class="col-lg-12"><a href="{% url 'userprofile_add' %}" class="btn btn-primary">{% trans 'Ajouter un utilisateur' %}</a></div>
                 </div>
 
                 {% block content_user %}
-                <div class="row text-center">
+                <div class="row">
                     <div class="col-lg-offset-2 col-lg-8">
                         <h2 class="">{{user.first_name}} {{user.last_name}}</h2>
                         <ul class="list-inline">
@@ -39,14 +39,16 @@
                         <br>
                         <div class="row">
                             <div class="col-md-7">
-                             {% if request.user.profile.photo %}
+                             {% if user.profile.photo %}
                                 <img src="{{user.profile.photo.url}}" class="img-responsive">
                             {% endif %}
                             </div> 
+                             {% if user.profile.bio %}
                             <div class="col-md-5">
                                 <label>Description:</label>
                                 <p>{{user.profile.bio}}</p>
                             </div> 
+                            {% endif %}
                         </div>
                         <br>
                     
