--- a/templates/userprofile/profile_update.html
+++ b/templates/userprofile/profile_update.html
@@ -6,30 +6,9 @@
 {% block slide %}
     <section id="home" class="home">
 
-      <!--   <div class="overlay">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 ">
-                        <div class="main_home_slider">
-                            <div class="single_home_slider">
-                                <div class="main_home wow"> -->
-                                    <!-- <h1>Cook' iT</h1> -->
-                                    <img src="{% static 'assets/images/food_1.jpg' %}">
-                                    <!-- <p class="subtitle">Découvir, Cuisiner, Savourer</p>
-
-                                    <div class="home_btn">
-                                        <a href="" class="btn btn-primary">LEARN MORE</a>
-                                    </div> -->
-<!-- 
-                                </div>
-                            </div>
-                            
-                            
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
+     
+        <img src="{% static 'assets/images/food_1.jpg' %}">
+                                   
     </section>
 {% endblock slide %}
 
@@ -129,11 +108,11 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label>Cover image</label>
+                            <label>{% trans 'Photo' %}</label>
                              {{ profile_form.photo }}
                              {% if  user.profile.photo %}
                               {{ user.profile.photo.url }}
-                            <!-- <img src="{{ user.profile.photo.url }}" class="img-responsive"> -->
+                           
                             {% endif %}
                         </div>
                     </div>
