--- a/templates/notifications/includes/waiting_recipe_box.html
+++ b/templates/notifications/includes/waiting_recipe_box.html
@@ -2,35 +2,22 @@
 <li data-nf-id="{{ notification.id }}" id="nf-{{ notification.id }}" class="notification list-group-item {{ notification.read|yesno:'read,unread' }}">
 {% block notification %}
     {% if notification.target %}
-        {% blocktrans with actor_url=notification.actor_url actor=notification.actor verb=notification.verb target=notification.target target_url=notification.target_url%}
 
-        <p>
-            
-            <strong>{{ actor }}</strong> a publié une nouvelle recette <a href="{{ target_url }}" style="color:#000;">{{ target }}</a><br>
-            
-        {% endblocktrans %}
+       {% blocktrans with actor_url=notification.actor_url actor=notification.actor verb=notification.verb target=notification.target target_url=notification.target_url%}
+       <p class="no-justify">
+            <strong>{{ actor }}</strong> a publié une nouvelle recette <a href="{{ target_url }}" style="color:#FFC107;">{{ target }}</a>
+        {% endblocktrans %} <br>
 
-            <i class="fa fa-clock-o"></i> {% blocktrans with created=notification.created|timesince %}{{created}} ago{% endblocktrans %}
-        </p>
-<!--             <a href="" class="cook-second-color"> {{ verb }}</a>
- -->
-    {% else %}
-        {% blocktrans with actor_url=notification.actor_url actor=notification.actor verb=notification.verb%}
-        <p>
-            
-                <strong>{{ actor }}</strong>
-            
-        {% endblocktrans %}
-
-            <i class="fa fa-clock-o"></i> {% blocktrans with created=notification.created|timesince %}{{created}} ago{% endblocktrans %}<br>
-            <a href="" class="cook-second-color"> {{ verb }}</a>
+            <i class="fa fa-clock-o"></i> Il y'a {% blocktrans with created=notification.created|timesince %}{{created}}{% endblocktrans %}
+        
         </p>
 
     {% endif %}
    
 {% endblock notification %}
  
-</li>  
+</li>
+
 
 
 
