--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -13,30 +13,9 @@
 	
     <section id="home" class="home">
     
-      <!--   <div class="overlay">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 ">
-                        <div class="main_home_slider">
-                            <div class="single_home_slider">
-                                <div class="main_home wow"> -->
-                                    <!-- <h1>Cook' iT</h1> -->
-                                    <img src="{% static 'assets/images/top-image.jpg' %}">
-                                    <!-- <p class="subtitle">Découvir, Cuisiner, Savourer</p>
-
-                                    <div class="home_btn">
-                                        <a href="" class="btn btn-primary">LEARN MORE</a>
-                                    </div> -->
-<!-- 
-                                </div>
-                            </div>
-                            
-                            
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
+      
+         <img src="{% static 'assets/images/top-image.jpg' %}">
+                                    
     </section>
 {% endblock slide %}
 
@@ -141,7 +120,7 @@
 
         <div class="row" id="commentaire">
         {% get_comment_count for post as comment_count %}
-        <h5 class="padding-20" data-toggle="collapse" href="#collapse1"><i class="fa fa-comments" aria-hidden="true"></i> {{comment_count}} {% trans 'Commentaire'{{ comment_count|pluralize }} %} </h5>
+        <h5 class="padding-20" data-toggle="collapse" href="#collapse1"><i class="fa fa-comments" aria-hidden="true"></i> {{comment_count}} {% trans 'Commentaires'%} </h5>
         
 
         <div id="collapse1" class="panel-collapse collapse">
